Qodana cleanup: 156 behavior-preserving fixes + 1 latent NPE fix
Step 3.2 on the recommended profile. Resolved 156 of 315 findings via 16
parallel agents over disjoint file batches: unused imports, redundant
modifiers/casts/qualifiers/type-args, size()==0 -> isEmpty(), trivial ifs,
field-can-be-local, duplicate switch branches/expressions, stream/Optional/
string simplifications, javadoc references. Plus a real latent NPE in
WindowsDpapiKeyCustody.safeMessage (null Throwable with a blank message
dereferenced e.getClass()).

158 findings deliberately left and documented: defensive null-guards kept,
trust-surface regex/control-flow untouched, ExtractMethodRecommender advisories,
record-constructor normalization, requireNonNull validation side-effects. Zero
behavior/logic/regex change in trust-surface files (manually verified diffs).

Gate: clean gradlew check --no-daemon BUILD SUCCESSFUL (full suite + jacoco +
artifact canary scan). 77 files, +150/-229.